--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kashif Liaqat"
-  avatar           : "profile.png"
+  avatar           : "profile.png.jpeg"
   bio              : "Fulbright Scholar - Masters in Mechanical Engineering"
   location         : "Tallahassee, FL, USA"
   employer         :
