--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Kashif Liaqat"
   avatar           : "profile.png.jpeg"
-  bio              : |
+  bio              : |+
                       This has one newline.
                       xyz
   location         : "Tallahassee, FL, USA"
