--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Kashif Liaqat"
   avatar           : "profile.png.jpeg"
-  bio              : "Fulbright Scholar | Lecturer (BUITEMS, Pakistan) | MS (Thesis) Mechanical Engineering | BS Mechanical Engineering"
-  location         : "Quetta, Pakistan"
+  bio              : "Ph.D. Student | Fulbright Alumni | Mechanical Engineer"
+  location         : "HOuston, TX, USA"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=wad9lnIAAAAJ&hl=en"
