--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Kashif Liaqat"
   avatar           : "profile.png.jpeg"
   bio              : "Ph.D. Student | Fulbright Alumni | Mechanical Engineer"
-  location         : "HOuston, TX, USA"
+  location         : "Houston, TX, USA"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=wad9lnIAAAAJ&hl=en"
